--- a/packages/nodeppt-parser/template/index.ejs
+++ b/packages/nodeppt-parser/template/index.ejs
@@ -7,9 +7,17 @@
 <head>
     <meta charset="UTF-8">
     <title><%= title %> - By <%= speaker %></title>
-    <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.staticfile.org/prism/1.15.0/themes/prism.min.css">
-    <link rel="stylesheet" href="https://cdn.staticfile.org/KaTeX/0.10.0-rc.1/katex.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="https://gcore.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
+
+    <% if (hasOwnProperty('plugins') && plugins && plugins.indexOf && ~plugins.indexOf('fontawesome')) { %>
+        <link rel="stylesheet" href="https://gcore.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/fontawesome.min.css">
+    <% } %>
+    
+    <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/prism/1.15.0/themes/prism.min.css"> -->
+
+    <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/KaTeX/0.10.0-rc.1/katex.min.css"> -->
+
     <% if (hasOwnProperty('prismTheme') && ['dark', 'coy', 'funky', 'okaidia', 'tomorrow', 'solarizedlight', 'twilight'].includes(prismTheme)) { %>
         <link rel="stylesheet" href="https://cdn.staticfile.org/prism/1.15.0/themes/prism-<%= prismTheme %>.min.css">
     <% } %>
@@ -21,7 +29,8 @@
     <% } %>
 
     <% if (hasOwnProperty('plugins') && plugins && plugins.indexOf && ~plugins.indexOf('katex')) { %>
-        <link rel="stylesheet" href="https://cdn.staticfile.org/KaTeX/0.5.1/katex.min.css">
+        <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/KaTeX/0.5.1/katex.min.css"> -->
+        <link rel="stylesheet" href="https://gcore.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
     <% } %>
 </head>
 <body>
@@ -30,12 +39,23 @@
         <%- content %>
     </article>
 </div>
-<% if (hasOwnProperty('plugins') && plugins && plugins.indexOf && ~plugins.indexOf('echarts')) { %>
-    <script src="https://cdn.staticfile.org/echarts/4.8.0/echarts.min.js"></script>
+<% if (hasOwnProperty('plugins') && plugins && plugins.indexOf && ~plugins.indexOf('fontawesome')) { %>
+    <script src="https://gcore.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/js/fontawesome.min.js"></script>
 <% } %>
+
+<% if (hasOwnProperty('plugins') && plugins && plugins.indexOf && ~plugins.indexOf('katex')) { %>
+    <script src="https://gcore.jsdelivr.net/npm/katex@0.16.9/katex.min.js"></script>
+<% } %>
+
+<% if (hasOwnProperty('plugins') && plugins && plugins.indexOf && ~plugins.indexOf('echarts')) { %>
+    <!-- <script src="https://cdn.staticfile.org/echarts/4.8.0/echarts.min.js"></script> -->
+    <script src="https://gcore.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
+<% } %>
+
 <% if (hasOwnProperty('plugins') && plugins && plugins.indexOf && ~plugins.indexOf('mermaid')) { %>
-    <script src="https://cdn.staticfile.org/mermaid/8.5.2/mermaid.min.js"></script>
-    <script>mermaid.startOnLoad = false;</script>
+    <!-- <script src="https://cdn.staticfile.org/mermaid/8.5.2/mermaid.min.js"></script> -->
+    <!-- <script>mermaid.startOnLoad = false;</script> -->
+    <script src="https://gcore.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.min.js"></script>
 <% } %>
 
 <% if (hasOwnProperty('js') && js.length) { %>
