--- a/packages/nodeppt-parser/template/index.ejs
+++ b/packages/nodeppt-parser/template/index.ejs
@@ -17,9 +17,13 @@
     <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/prism/1.15.0/themes/prism.min.css"> -->
 
     <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/KaTeX/0.10.0-rc.1/katex.min.css"> -->
+    <link rel="stylesheet" href="https://gcore.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.min.css">
+
+    <link rel="stylesheet" href="https://cdn.staticfile.org/KaTeX/0.10.0-rc.1/katex.min.css">
 
     <% if (hasOwnProperty('prismTheme') && ['dark', 'coy', 'funky', 'okaidia', 'tomorrow', 'solarizedlight', 'twilight'].includes(prismTheme)) { %>
-        <link rel="stylesheet" href="https://cdn.staticfile.org/prism/1.15.0/themes/prism-<%= prismTheme %>.min.css">
+        <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/prism/1.15.0/themes/prism-<%= prismTheme %>.min.css"> -->
+        <link rel="stylesheet" href="https://gcore.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-<%= prismTheme %>.min.css">
     <% } %>
 
     <% if (hasOwnProperty('css') && css.length) { %>
@@ -29,8 +33,8 @@
     <% } %>
 
     <% if (hasOwnProperty('plugins') && plugins && plugins.indexOf && ~plugins.indexOf('katex')) { %>
-        <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/KaTeX/0.5.1/katex.min.css"> -->
-        <link rel="stylesheet" href="https://gcore.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
+        <link rel="stylesheet" href="https://cdn.staticfile.org/KaTeX/0.5.1/katex.min.css"> 
+        <!-- <link rel="stylesheet" href="https://gcore.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css"> -->
     <% } %>
 </head>
 <body>
@@ -41,10 +45,6 @@
 </div>
 <% if (hasOwnProperty('plugins') && plugins && plugins.indexOf && ~plugins.indexOf('fontawesome')) { %>
     <script src="https://gcore.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/js/fontawesome.min.js"></script>
-<% } %>
-
-<% if (hasOwnProperty('plugins') && plugins && plugins.indexOf && ~plugins.indexOf('katex')) { %>
-    <script src="https://gcore.jsdelivr.net/npm/katex@0.16.9/katex.min.js"></script>
 <% } %>
 
 <% if (hasOwnProperty('plugins') && plugins && plugins.indexOf && ~plugins.indexOf('echarts')) { %>
