增加CTS组件，>   left | center | right

--- a/packages/nodeppt-js/assets/less/_color.less
+++ b/packages/nodeppt-js/assets/less/_color.less
@@ -661,6 +661,21 @@ Cards
     }
 }
 
+/*===CTS (Call to Action - subject, Price, Promo...)  ===== */
+
+@media (min-width: 768px) {
+    .cts .subject-left {
+        border-image: linear-gradient(90deg, transparent, fade(@black, (0.4 * 100)) 50%, transparent) 1 100%;
+        border-right-width: 1px;
+        border-style: solid;
+    }
+    .cts .subject-right {
+        border-image: linear-gradient(90deg, transparent, fade(@black, (0.4 * 100)) 50%, transparent) 1 100%;
+        border-left-width: 1px;
+        border-style: solid;
+    }
+}
+
 /*=========================================
 Tables
 =========================================== */
