--- a/packages/nodeppt-js/assets/less/full.less
+++ b/packages/nodeppt-js/assets/less/full.less
@@ -27,7 +27,7 @@
 		6.7 .flexblock.gallery
 		6.8 .flexblock.plans
 		6.9. flexblock.activity
-	7. Promos/Offers (pricing, tagline, CTA...)
+	7. Promos/Offers (pricing, tagline, CTA,CTS...)
 	8. Work / Resume / CV
 	9. Table of contents
 	10. Cards
@@ -69,6 +69,7 @@
 @import (optional) 'modules/_flexblock-plans.less';
 @import (optional) 'modules/_flexblock-activity.less';
 @import (optional) 'modules/_promos.less';
+@import (optional) 'modules/_cts.less';
 @import (optional) 'modules/_work.less';
 @import (optional) 'modules/_toc.less';
 @import (optional) 'modules/_cards.less';
