--- a/packages/nodeppt-js/assets/less/_typography.less
+++ b/packages/nodeppt-js/assets/less/_typography.less
@@ -81,6 +81,15 @@ ul.description li,
     margin-left: 1.6rem;
 }
 
+.row ul li {
+    list-style: none;
+    margin-left: 0;
+}
+
+.row ol > li {
+    margin-left: 1.6rem;
+}
+
 h1 svg,
 h2 svg,
 h3 svg,
