--- a/packages/nodeppt-js/assets/less/modules/_grid.less
+++ b/packages/nodeppt-js/assets/less/modules/_grid.less
@@ -56,4 +56,16 @@ Auto-fill & Equal height === */
             width: 50%;
         }
     }
+
+    & > .row {
+        display: flex;
+        flex: auto;
+        flex-direction: row;
+        padding: 2.4rem;
+        position: relative;
+        transition: 0.3s;
+        width: 100%;
+        align-items: center;
+    }
+
 }
