--- a/packages/nodeppt-js/assets/less/modules/_header-footer.less
+++ b/packages/nodeppt-js/assets/less/modules/_header-footer.less
@@ -5,8 +5,55 @@
 /* -- If you want an unique, global header/footer,read this:
 https://github.com/webslides/webslides/issues/57 -- */
 
-header,
-footer,
+.header,
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    @media (max-height: 1080px) {
+        height: 9rem;
+    }
+
+    @media (max-height: 768px) {
+        height: 7rem;
+    }
+
+    @media (max-height: 600px) {
+        height: 6rem;
+    }
+
+    @media (max-height: 360px) {
+        height: 0rem;
+    }
+
+}
+
+.header-wrap,
+.footer-wrap {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+
+header {
+    padding: 0rem 2.4rem 2.4rem 2.4rem;
+    transition: all 0.4s ease-in-out;
+    width: 100%;
+}
+
+
+footer {
+    padding: 2.4rem 2.4rem 0rem 2.4rem;
+    transition: all 0.4s ease-in-out;
+    width: 100%;
+}
+
 #navigation {
     padding: 2.4rem;
     transition: all 0.4s ease-in-out;
