--- a/packages/nodeppt-js/assets/less/_base.less
+++ b/packages/nodeppt-js/assets/less/_base.less
@@ -93,6 +93,7 @@ nav a[rel='external'] em,
 /*=== 1.1 WRAP/CONTAINER === */
 .wrap,
 header nav,
+subject nav,
 footer nav {
     margin-left: auto;
     margin-right: auto;
@@ -156,6 +157,55 @@ img.alignleft,
 svg.alignleft,
 figure.alignleft {
     margin: 0.8rem 2.4rem 0.8rem 0;
+}
+
+header img.aligncenter,
+header svg.aligncenter,
+header figure.aligncenter,
+subject img.aligncenter,
+subject svg.aligncenter,
+subject figure.aligncenter,
+footer img.aligncenter,
+footer svg.aligncenter,
+footer figure.aligncenter {
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+header img.alignright,
+header svg.alignright,
+header figure.alignright,
+subject img.alignright,
+subject svg.alignright,
+subject figure.alignright,
+footer img.alignright,
+footer svg.alignright,
+footer figure.alignright {
+    margin: 0;
+}
+
+header img.alignleft,
+header svg.alignleft,
+header figure.alignleft,
+subject img.alignleft,
+subject svg.alignleft,
+subject figure.alignleft,
+footer img.alignleft,
+footer svg.alignleft,
+footer img.alignleft {
+    margin: 0;
+}
+
+header img,
+header svg,
+header figure,
+subject img,
+subject svg,
+subject figure,
+footer img,
+footer svg,
+footer img {
+    max-height: 100%;
 }
 
 @sizes: 80, 70, 60, 50, 40, 30, 20;
